# shaderide

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  resources.qrc
assets/app/: icon.afdesign  icon.psd  logo.afdesign  logo_light.afphoto
config/: glsl460.json
src/: main.cpp  resource.hpp  version.hpp
src/Core/: Application.cpp  Application.hpp  ApplicationDefaults.hpp  GeneralException.hpp  MathUtility.hpp  Memory.hpp  QtUtility.hpp  Shell.cpp  Shell.hpp  SyntaxErrorException.hpp
src/GL/: GLDefaults.hpp  GLSLCompileError.cpp  GLSLCompileError.hpp  GLUtility.hpp  Shader.cpp  Shader.hpp
src/GL/Loaders/: OBJMeshLoader.cpp  OBJMeshLoader.hpp
src/GL/World/: Mesh.cpp  Mesh.hpp  Vertex.hpp
src/GUI/: AboutDialog.cpp  AboutDialog.hpp  AsyncModelLoader.cpp  AsyncModelLoader.hpp  LogOutputWidget.cpp  LogOutputWidget.hpp  MainWindow.cpp  MainWindow.hpp  OpenGLWidget.cpp  OpenGLWidget.hpp  OpenGLWidget_ModelLoader.cpp  OpenGLWidget_ModelLoader.hpp  StyleSheets.hpp
src/GUI/Code/: CodeEditor.cpp  CodeEditor.hpp  LineNumberArea.cpp  LineNumberArea.hpp  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp
src/GUI/Dialogs/: AboutDialog.cpp  AboutDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp
src/GUI/Style/: AboutDialogStyle.hpp  CodeEditorStyle.hpp  EnvSettingsPanelStyle.hpp  LoadingWidgetStyle.hpp  LogOutputWidgetStyle.hpp  OpenGLWidgetStyle.hpp  SettingsDialogStyle.hpp  TextureBrowserStyle.hpp
src/GUI/Widgets/: EnvSettingsPanel.cpp  EnvSettingsPanel.hpp  FileTabWidget.cpp  FileTabWidget.hpp  FindWidget.cpp  FindWidget.hpp  ImageButton.cpp  ImageButton.hpp  LoadingWidget.cpp  LoadingWidget.hpp  TextureBrowser.cpp  TextureBrowser.hpp  TextureBrowserImage.cpp  TextureBrowserImage.hpp
src/Project/: ProjectException.hpp  SerializableVector3.hpp  ShaderProject.cpp  ShaderProject.hpp
test/: ProjectTest.cpp
